# ai-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  check_db.py  config-vps.py  create-deploy-scripts.js  create-deploy-yml.js  debug_regex.py  deploy-vps.py  fix-vps-structure.py  fix_constructors.py  package.json  pnpm-workspace.yaml  run_migration.ps1  skills-lock.json  tsconfig.base.json  turbo.json
backend/: .env.example  README.md  alembic.ini  create_tables.py  migrate.py  pyproject.toml  requirements.dev.txt  start_server.ps1  test_all.ps1
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_make_channel_mappings_tenant_nullable.py  003_create_web_research_results.py  004_create_document_ingestion.py  005_create_ocr_results.py  006_create_generated_reports.py  007_add_channel_session_tracking.py  007_add_extracted_text_to_document_artifacts.py  008_create_user_profiles.py  009_create_kb_documents.py  011_create_decision_feedback.py  012_create_tenant_agents.py
backend/migrations/alembic/versions/: 001_initial_schema.py
backend/src/ai_platform/: create_all_tables.py  database.py  main.py
backend/src/ai_platform/api/v1/: admin.py  documents.py  feedback.py  kb.py  odin.py  ping.py  ragnar.py  reports.py  routers.py  tasks.py  tenants.py  web_research.py  webhooks.py
backend/src/ai_platform/channels/: __init__.py  base.py  discord.py  telegram.py  whatsapp_channel.py
backend/src/ai_platform/core/: config.py  security.py
backend/src/ai_platform/middleware/: auth.py  json_logging.py  licensing.py  logging.py  tenant.py
backend/src/ai_platform/models/: channel_mapping.py  db.py
backend/src/ai_platform/orchestrator/: __init__.py  budget.py  credential_pool.py  cron_manager.py  knowledge_base.py  llm_client.py  mcp.py  memory.py  model_catalog.py  modules.py  observability.py  odin.py  plugins.py  pricing.py  ragnar.py  rate_limiter.py  session.py  skill_commands.py  skills.py  subagent.py  trajectory.py
backend/src/ai_platform/schemas/: auth.py  task.py  tenant.py
backend/src/ai_platform/services/: auth_service.py  billing_service.py  document_chunker.py  document_storage.py  embedding_service.py  report_models.py  report_renderer.py  vision_ocr.py  web_research_service.py
backend/src/ai_platform/workers/: document_pipeline.py  task_runner.py
backend/tests/: conftest.py  debug_scan.py  test_channels.py  test_document_ingestion.py  test_modules.py  test_modules_file.py  test_odin.py  test_ragnar.py  test_report_renderer.py  test_security.py  test_vision_ocr.py  test_web_research_service.py
backend/tests/test_api/: test_endpoints.py
backend/tests/test_models/: test_models.py
(+180 files in other folders)
