[tool.poetry]
name = "ai-platform-backend"
version = "1.0.0"
description = "Backend de NeuralCrew Labs - Plataforma de marketing impulsada por IA"
authors = ["NeuralCrew Labs <dev@neurialcrew.com>"]
readme = "README.md"
packages = [
    { include = "ai_platform", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.35"
psycopg = {extras = ["binary", "pool"], version = "^3.2.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.4.0"}
alembic = "^1.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
openai = "^1.50.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"
greenlet = "^3.1.0"

# Web research internal capability
beautifulsoup4 = "^4.12.0"
markdownify = "^0.13.0"
playwright = "^1.48.0"

# Document ingestion internal capability
python-docx = "^1.1.0"
pdfplumber = "^0.11.0"
python-magic = "^0.4.0"
pytesseract = "^0.3.10"

# Vision OCR internal capability
opencv-python-headless = "^4.10.0"
PyMuPDF = "^1.24.0"
numpy = "^1.26.0"

# Report renderer internal capability
Jinja2 = "^3.1.0"
matplotlib = "^3.9.0"
weasyprint = "^62.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
ruff = "^0.8.0"
mypy = "^1.11.0"
pre-commit = "^4.0.0"
taskipy = "^1.14.0"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "F841", "SIM105", "SIM103", "UP042", "RUF012", "RUF013", "B904"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*", "celery.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.taskipy]
run = "uvicorn ai_platform.main:app --host 0.0.0.0 --port 4000 --reload"
test = "pytest -v"
lint = "ruff check backend/src"
format = "ruff format backend/src"
mypy = "mypy backend/src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
